# music-lyric-player-skia

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile
.github/workflows/: release-windows.yml  release.yml
cmake/common/: platform.cmake
cmake/glaze/: build.cmake  include.cmake
cmake/lyric/: build.cmake  include.cmake
cmake/package/: windows.cmake
cmake/skia/: build.cmake  include.cmake
example/windows/: CMakeLists.txt  lyric_input.cpp  lyric_input.h  main.cpp  sample_lyric.cpp  sample_lyric.h  sample_lyric_data.gen.h  vulkan_window.cpp  vulkan_window.h  window.cpp  window.h
include/: abi.h  export.h  player.h  renderer.h
script/: format-code.py  generate-config.py  generate-icu-data.py  release.py
script/change-log/: build.py  common.py  match.py
script/generate-config/: emit.py  glaze.py  main.py  model.py  schema.py
src/: CMakeLists.txt
src/backend/font/: font.h  font_win.cpp
src/backend/gpu/: surface.h  vulkan.cpp
src/backend/icu/: load.cpp
src/base/: config.cpp  config.gen.h  config.h  merger.cpp  merger.h  offset.cpp  offset.h  player.cpp  player.h
src/base/config/: config.gen.h  config.h  config.schema.json
src/lyric/: access.cpp  access.h
src/platform/native/: abi.cpp
src/playback/: merger.cpp  merger.h  offset.cpp  offset.h  player.cpp  player.h
src/playback/config/: config.gen.h  config.h  config.schema.json  index.h
src/render/: renderer.cpp  renderer.h
src/render/common/: context.h
src/render/components/line/: normal.cpp  normal.h
src/render/components/line/base/: index.h
src/render/components/line/interlude/: index.cpp  index.h
src/render/components/line/normal/: index.cpp  index.h
src/render/components/line/normal/main/plain/: index.cpp  index.h
src/render/components/line/normal/main/syllable/: index.cpp  index.h  word.cpp  word.h
src/render/components/line/normal/main/syllable/animation/: float.cpp  float.h  index.h  mask.cpp  mask.h
src/render/components/line/normal/plain/: index.cpp  index.h
src/render/components/line/normal/syllable/: index.cpp  index.h  word.cpp  word.h
src/render/components/line/normal/syllable/animation/: float.cpp  float.h  index.h  mask.cpp  mask.h
src/render/config/: config.gen.glaze.h  config.gen.h  config.h  config.schema.json  index.h
src/render/config/common/: index.gen.h  index.schema.json
src/render/config/container/: index.gen.h  index.schema.json
src/render/config/effect/: index.gen.h  index.schema.json
src/render/config/layout/: index.gen.h  index.schema.json
src/render/config/line/: index.gen.h  index.schema.json
src/render/config/line/interlude/: index.gen.h  index.schema.json
src/render/config/line/normal/: index.gen.h  index.schema.json
src/render/config/line/normal/main/: index.gen.h  index.schema.json  syllable.gen.h  syllable.schema.json
src/render/config/line/normal/main/syllable/: index.gen.h  index.schema.json
src/render/config/line/normal/main/syllable/word/: index.gen.h  index.schema.json
src/render/config/line/normal/main/syllable/word/animation/: index.gen.h  index.schema.json
src/render/config/scroll/: index.gen.h  index.schema.json
src/render/core/: effect.cpp  effect.h  layout.cpp  layout.h  line.cpp  line.h  scroll.cpp  scroll.h  transition.cpp  transition.h
src/render/utils/: length.h
src/render/utils/animation/: easing.h  interpolate.h  tween.h
src/render/utils/color/: hex.h  parse.h  rgb.h
src/rendering/: renderer.cpp  renderer.h
src/rendering/common/: context.h
src/rendering/components/container/: index.cpp  index.h
src/rendering/components/line/base/: index.h
src/rendering/components/line/interlude/: index.cpp  index.h
src/rendering/components/line/normal/: index.cpp  index.h
src/rendering/components/line/normal/main/plain/: index.cpp  index.h
src/rendering/components/line/normal/main/syllable/: index.cpp  index.h  word.cpp  word.h
src/rendering/components/line/normal/main/syllable/animation/: float.cpp  float.h  index.h  mask.cpp  mask.h
src/rendering/config/: config.gen.glaze.h  config.gen.h  config.schema.json  index.h
src/rendering/config/common/: index.gen.h  index.schema.json
src/rendering/config/container/: index.gen.h  index.schema.json
src/rendering/config/effect/: index.gen.h  index.schema.json
src/rendering/config/layout/: index.gen.h  index.schema.json
src/rendering/config/line/: index.gen.h  index.schema.json
src/rendering/config/line/interlude/: index.gen.h  index.schema.json
src/rendering/config/line/normal/: index.gen.h  index.schema.json
src/rendering/config/line/normal/main/: index.gen.h  index.schema.json  syllable.gen.h  syllable.schema.json
src/rendering/config/scroll/: index.gen.h  index.schema.json
src/rendering/core/: effect.cpp  effect.h  layout.cpp  layout.h  line.cpp  line.h  scroll.cpp  scroll.h  transition.cpp  transition.h
src/rendering/utils/: length.h
src/rendering/utils/animation/: easing.h  interpolate.h  tween.h
src/rendering/utils/color/: hex.h  parse.h  rgb.h
src/rendering/utils/fragment/: builder.h  glyph.h  group.h
src/rendering/utils/layout/: paragraph.h
src/rendering/utils/shaping/: font.h  glyph.h  iterator.h  shaper.h
src/utils/: clock.h  config_manager.h  signal.h  steady_clock.cpp  steady_clock.h
src/utils/clock/: clock.h  steady.cpp  steady.h
src/utils/config/: access.h  config.h  property.glaze.h  property.h
src/utils/event/: signal.h
src/utils/manager/: config.h
